--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/skilledge-tab-logo.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/skilledge-tab-logo.png"
+    />
     <link rel="apple-touch-icon" href="/skilledge-tab-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff" />
